# TinyGameEngineLab

./: .gitignore
LearnOpenGL/: .gitignore  README.md
LearnOpenGL/Proj/: CMakeLists.txt
LearnOpenGL/Proj/docs/Day01/: 常用API与窗口渲染流程.md
LearnOpenGL/Proj/docs/Day02/: 第一个三角形与顶点数据传递.md
LearnOpenGL/Proj/includes/glad/: glad.h
LearnOpenGL/Proj/src/: glad.c  main.cpp
